--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    line-height: 1;
+}
+
 #whiteboard {
-    box-shadow: 0 0  5px rgba(0, 0, 0, 0.25);
     display: block;
-    margin: 50px auto;
-    width: 80%;
-    border-radius: 12px;
 }
